--- a/package.json
+++ b/package.json
@@ -21,8 +21,19 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.1.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "github:nestjs/config",
+    "class-validator": "^0.14.2",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
+    "mongoose": "^8.14.2",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
