feat: Model review document & update user signup and signin

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 # Project
 ENVIRONMENT='development'
 NODE_ENV_MESSAGE=''
-PORT=
+PORT=3001
 
 # Database
 MONGODB_URI=''
+MONGODB_DATABASE='echo'
 
 #Auth
 JWT_ISSUER=''
+JWT_EXPIRES_IN_SECONDS=''
 JWT_SECRET_PUBLIC=``
 JWT_SECRET_PRIVATE=``
-JWT_EXPIRES_IN=''
