--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.0",
     "bcrypt": "^5.1.1",
-    "class-transformer": "github:nestjs/config",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
