--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ JWT_ISSUER=''
 JWT_EXPIRES_IN_SECONDS=''
 JWT_SECRET_PUBLIC=``
 JWT_SECRET_PRIVATE=``
+
+#AWS
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_PUBLIC_BUCKET_NAME=
